# twinbot_docker

./: .gitignore  Dockerfile  README.md  disclaimer.txt  docker-compose.yml  pyproject.toml  requirements.txt  stop_agent.sh
src/: twinbot_agent.py  twinbot_script.py
