[build-system]
requires = ["setuptools>=61.0", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "twinbot_docker"
version = "1.0.0"
description = "This repository provides a docker that runs the Ollama Telegrambot API."
authors = [
    { name = "Didac Cristobal", email = "didac.crst@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools",
    "toml",
]